--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@stackso/js-core": "^0.5.10",
     "@supabase/supabase-js": "^2.47.9",
+    "@tavily/core": "^0.0.2",
     "agent-twitter-client": "^0.0.16",
     "apify-client": "^2.10.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
+    "exa-js": "^1.3.3",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
