--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@stackso/js-core": "^0.5.10",
     "@supabase/supabase-js": "^2.47.9",
     "@tavily/core": "^0.0.2",
+    "@types/cheerio": "^0.22.35",
     "agent-twitter-client": "^0.0.16",
     "apify-client": "^2.10.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
