--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install
@@ -55,11 +55,19 @@ jobs:
             echo "Git status:"
             git status
 
+            # Install bun if not already installed
+            if ! command -v bun &> /dev/null; then
+              echo "Installing bun..."
+              curl -fsSL https://bun.sh/install | bash
+              source ~/.bashrc
+            fi
+
             # Ensure correct Node.js version
             source ~/.nvm/nvm.sh
             nvm use 20
 
             # Install dependencies
-            npm install
+            bun install
 
+            # Restart the application
             pm2 restart ecosystem.config.cjs --update-env
