--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,7 +67,7 @@ jobs:
             nvm use 20
 
             # Install dependencies
-            bun install
+            yarn install
 
             # Restart the application
             pm2 restart ecosystem.config.cjs --update-env
