--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -55,11 +55,11 @@ jobs:
             echo "Git status:"
             git status
 
-            # Install bun if not already installed
+            # Install bun globally if not already installed
             if ! command -v bun &> /dev/null; then
-              echo "Installing bun..."
-              curl -fsSL https://bun.sh/install | bash
-              source ~/.bashrc
+              echo "Installing bun globally..."
+              sudo curl -fsSL https://bun.sh/install | sudo bash
+              sudo ln -s ~/.bun/bin/bun /usr/local/bin/bun
             fi
 
             # Ensure correct Node.js version
@@ -67,7 +67,22 @@ jobs:
             nvm use 20
 
             # Install dependencies
-            yarn install
+            bun install
+
+            # Update PM2 environment variables
+            echo "Updating PM2 environment..."
+            cat > ecosystem.config.cjs << 'EOL'
+            module.exports = {
+              apps: [{
+                name: 'recoup-agent-apis',
+                script: 'bun x tsc && nodemon --experimental-specifier-resolution=node --no-warnings ./dist/app.js',
+                env: {
+                  PATH: '/usr/local/bin:/usr/bin:/bin:~/.bun/bin',
+                  NODE_ENV: 'production'
+                }
+              }]
+            }
+            EOL
 
             # Restart the application
             pm2 restart ecosystem.config.cjs --update-env
