--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to DigitalOcean Droplet
 on:
   push:
     branches:
-      - "**" # This will trigger the workflow on push to any branch
+      - "main" # This will trigger the workflow on push to any branch
 
 jobs:
   deploy:
