--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ SUPABASE_URL=your_supabase_url
 
 # Storage
 PINATA_JWT=your_pinata_jwt
+ARWEAVE_KEY=your_base64_encoded_arweave_key
 
 # Additional Services
 STACK_KEY=your_stack_key
