--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "typescript": "^5.7.3"
   }
