--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "start": "npx tsc && nodemon --experimental-specifier-resolution=node --no-warnings ./dist/app.js",
-    "test": "echo \"No tests specified\" && exit 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write app.ts lib controllers agents",
     "update-types": "npx supabase gen types typescript --project-id godremdqwajrwazhbrue --schema public > types/database.types.ts"
   },
@@ -43,6 +45,9 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   }
 }
