P1: segment name generation - LangGraph + Claude 3.7     actual:     The segment name generation process is currently not using LangGraph AI agents; it uses the legacy AI implementation (e.g., via lib/getChatCompletions.ts).     required:     Create a new library getLangGraphCompletions.ts that wraps LangGraph functionality.     Update the lib/segments/generateSegmentNames.ts file to use the new getLangGraphCompletions library instead of the legacy getChatCompletions.ts.     Keep changes minimal.     Reference the implementation from the front-end web repository, for example:

--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "dependencies": {
     "@ardrive/turbo-sdk": "^1.2.0",
     "@browserbasehq/stagehand": "^1.10.1",
+    "@langchain/anthropic": "^0.3.15",
+    "@langchain/core": "^0.3.42",
+    "@langchain/langgraph": "^0.2.55",
     "@playwright/test": "^1.49.1",
     "@stackso/js-core": "^0.5.10",
     "@supabase/supabase-js": "^2.47.9",
     "@tavily/core": "^0.0.2",
     "@types/cheerio": "^0.22.35",
+    "@types/uuid": "^10.0.0",
     "agent-twitter-client": "^0.0.16",
     "apify-client": "^2.10.0",
     "arweave": "^1.14.4",
@@ -38,7 +42,7 @@
     "prettier": "^3.4.1",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
-    "uuid": "^11.0.4",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
