--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # API Keys
 APIFY_TOKEN=your_apify_token
 OPENAI_API_KEY=your_openai_api_key
+ANTHROPIC_API_KEY=your_anthropic_api_key
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 
 # Twitter Credentials
