P1: API - Add in-process integration to /api/image endpoint     actual: The /api/image endpoint lacks integration with the in-process protocol for attribution and ownership.     required: Enhance the existing /api/image endpoint to:     - Integrate with in-process protocol on Base by calling the createContract method after successful image generation     - Return the in-process contract details in the API response     - Add appropriate error handling for in-process integration     - Update documentation to reflect the additional response fields       This enhancement will provide proper attribution and ownership tracking for generated images through the in-process protocol.

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ STACK_KEY=your_stack_key
 RESEND_API_KEY=your_resend_api_key
 EXA_API_KEY=your_exa_api_key
 TAVILY_API_KEY=your_tavily_api_key 
+
+#  Coinbase
+CDP_APP_KEY_ID=your_coinbase_developer_platform_app_key_id
+CDP_SECRET=your_coinbase_developer_platform_secret
+CDP_PAYMASTER_KEY=your_coinbase_paymaster_key
