--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ardrive/turbo-sdk": "^1.2.0",
     "@browserbasehq/stagehand": "^1.10.1",
+    "@coinbase/coinbase-sdk": "^0.21.0",
     "@langchain/anthropic": "^0.3.15",
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
