--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APIFY_TOKEN=your_apify_token
 OPENAI_API_KEY=your_openai_api_key
 ANTHROPIC_API_KEY=your_anthropic_api_key
 SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
 
 # Twitter Credentials
 TWITTER_USERNAME=your_twitter_username
