--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stripe": "^18.5.0",
     "ts-node": "^10.9.2",
     "uuid": "^11.0.5",
+    "viem": "^2.37.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
