--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ STACK_KEY=your_stack_key
 RESEND_API_KEY=your_resend_api_key
 EXA_API_KEY=your_exa_api_key
 TAVILY_API_KEY=your_tavily_api_key 
+REDIS_URL=your_vercel_redis_url
 
 #  Coinbase
 CDP_APP_KEY_ID=your_coinbase_developer_platform_app_key_id
