--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "arweave": "^1.14.4",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "bullmq": "^5.61.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "ioredis": "^5.8.2",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.7",
     "openai": "^4.74.0",
