API - Jobs - Create - use trigger.dev to call schedules.create for the customer-prompt-task task

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ RESEND_API_KEY=your_resend_api_key
 EXA_API_KEY=your_exa_api_key
 TAVILY_API_KEY=your_tavily_api_key 
 REDIS_URL=your_vercel_redis_url
+TRIGGER_SECRET_KEY=tr_dev_xxxxxxxxxx
 
 #  Coinbase
 CDP_APP_KEY_ID=your_coinbase_developer_platform_app_key_id
