--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
     "ioredis": "^5.8.2",
+    "multiformats": "^13.4.1",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.7",
     "openai": "^4.74.0",
