/api/image/generate - prod uses Base mainnet

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ TRIGGER_SECRET_KEY=tr_dev_xxxxxxxxxx
 CDP_APP_KEY_ID=your_coinbase_developer_platform_app_key_id
 CDP_SECRET=your_coinbase_developer_platform_secret
 CDP_PAYMASTER_KEY=your_coinbase_paymaster_key
+
+# Environment
+NODE_ENV=production
